--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: Build
         shell: bash
         run: |
+          git submodule init
+          git submodule update
           ./build-no-pthread.sh
       - name: Package
         shell: bash
